# pygridsynth

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: python-app.yml
benchmark/: run_experiment.py  visualize_benchmark.ipynb
benchmark/data/: newsynth_runtime.data  newsynth_runtime_pi_128.data  pygridsynth_runtime.data  pygridsynth_runtime_pi_128.data
examples/: float.py  mixed_synthesis_parallel.py  mixed_synthesis_sequential.py  mpf.py  multi_qubit_basic.py  multi_qubit_domega.py  multi_qubit_random.py  str.py
pygridsynth/: __init__.py  __main__.py  cli.py  config.py  diophantine.py  domega_unitary.py  grid_op.py  gridsynth.py  loop_controller.py  mixed_synthesis.py  mixed_synthesis_parallel.py  mixed_synthesis_sequential.py  mixed_synthesis_utils.py  multi_qubit_unitary_approximation.py  mymath.py  myplot.py  normal_form.py  odgp.py  quantum_circuit.py  quantum_gate.py  region.py  ring.py  synthesis_of_cliffordT.py  tdgp.py  test.py  to_upright.py  two_qubit_unitary_approximation.py  unitary.py  unitary_approximation.py
tests/: test_examples_execution.py  test_exec_time.py  test_main.py  test_mixed_synthesis.py  test_multi_qubit_unitary_approximation.py  test_readme_consistency.py  test_readme_example.py
tests/test_utils/: examples_utils.py
