[project]
name = "pygridsynth"
version = "1.1.0"
authors = [{ name="Shuntaro Yamamoto", email="shun0923@g.ecc.u-tokyo.ac.jp" }, { name="Nobuyuki Yoshioka", email="nyoshioka@g.ecc.u-tokyo.ac.jp" }]
description = "Python version of the gridsynth program that computes approximations of z-rotations over the Clifford+T gate set."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "mpmath",
]

[tool.setuptools]
packages = ["pygridsynth"]

[project.scripts]
pygridsynth = "pygridsynth:main"

[project.urls]
"Homepage" = "https://github.com/quantum-programming/pygridsynth"
"Bug Tracker" = "https://github.com/quantum-programming/pygridsynth/issues"
