[project]
name = "pygridsynth"
version = "2.0.0"
authors = [{ name="Shuntaro Yamamoto", email="shun0923@g.ecc.u-tokyo.ac.jp" }, { name="Nobuyuki Yoshioka", email="nyoshioka@g.ecc.u-tokyo.ac.jp" }]
description = "Python version gridsynth program computes approximations of Z-rotations over the Clifford+T gate set"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "mpmath>=1.3",
    "setuptools",
    "matplotlib",
    "numpy",
    "scipy",
    "cvxpy",
    "numba",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "mypy",
    "black",
    "isort",
]

[tool.setuptools]
packages = ["pygridsynth"]

[project.scripts]
pygridsynth = "pygridsynth.cli:main"

[project.urls]
"Homepage" = "https://github.com/quantum-programming/pygridsynth"
"Bug Tracker" = "https://github.com/quantum-programming/pygridsynth/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, E704, E741, W503"

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
]
